\name{NEWS}
\title{News for Package \pkg{scater}}

\section{Changes in version 1.28.0, Bioconductor 3.17 Release}{
  \itemize{
    \item Change \code{exprs_values} (and similar) to \code{assay.type}.
    \item Tweak colouring of violin plots.
    \item Fix use of block arguments in \code{plotGroupedHeatmap}.
  }
}


\section{Changes in version 1.28.0, Bioconductor 3.17 Release}{
  \itemize{
    \item \code{swap_rownames} works in \code{retrieveCellInfo} for
    \code{altExp} now as well as in the main assay.
    \item Add \code{point_shape} argument to \code{plotDots} and
    \code{plotPlatePosition}.
  }
}

\section{Changes in version 1.26.0, Bioconductor 3.16 Release}{
  \itemize{
    \item Add \code{projectReducedDim} function to project points into
    an existing reduced dimensionality embedding.
    \item Support "color" and "colour" spellings in all plotting functions.
    \item Add \code{order_by} argument to cellwise plot functions.
    \item Add \code{rasterise} argument to \code{plotReducedDim} using
    \code{\link[ggrastr]{rasterise}}.
    \item Add \code{use_densvis} argument to \code{runTSNE} to add densvis support in UMAP and TSNE embeddings.
    \item Make multiplot defunct, remove deprecated args in \code{plotHeatmap},
    \code{plotDots}.
    \item Add \code{point_fun} argument to \code{plotColData} and
    \code{plotExpression} determine the geom used to draw cells in those plots.
  }
}
\section{Changes in version 1.24.0, Bioconductor 3.15 Release}{
\itemize{
    \item Remove diffusion map functions that relied on destiny.
    \item Add \code{point.padding},\code{force} args to \code{plotReducedDim}; passed to \code{geom_text_repel}.
    \item Add warning about unused \code{use_dimred} argument in \code{runTSNE}.
}}


\section{Changes in version 1.22.0, Bioconductor 3.14 Release}{
\itemize{
    \item Rename \code{colour_columns_by} in \code{plotHeatmap} to 
    \code{color_columns_by} to match other arguments.