@@ -12,8 +12,8 @@ Authors@R: c(
         person("Leo", "Lahti", role=c("ctb"), email="leo.lahti@utu.fi",
 	             comment = c(ORCID = "0000-0001-5537-637X"))
 	)
-Version: 1.27.7
-Date: 2023-03-09
+Version: 1.27.8
+Date: 2023-04-24
 License: GPL-3
 Title: Single-Cell Analysis Toolkit for Gene Expression Data in R
 Description: A collection of tools for doing various analyses of
