@@ -221,6 +221,7 @@ importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,runif)
 importFrom(utils,head)
+importFrom(utils,modifyList)
 importFrom(viridis,scale_colour_viridis)
 importFrom(viridis,scale_fill_viridis)
 importFrom(viridis,viridis)
